ZEST-118 bugfix: _types in json should contain "Person", not "interface Person"